Stop horizontal overflowing on mobile

--- a/css/app.css
+++ b/css/app.css
@@ -138,4 +138,8 @@ ul.is-square-type {
         margin-right: 0;
     }
 
+    body {
+        overflow-x: hidden;
+    }
+
 }
